# download_and_compress_and_concat_GRIBs

./: README.md  calc_which_files_to_transfer.py  download_and_compress_and_concat.py  pyproject.toml  tinker_with_ftp.py
