[project]
name = "download-and-compress-and-concat-gribs"
version = "0.1.0"
description = "Just tinkering with ways to concurrently download GRIBs from DWD's HTTP server, compress as zstd, concat, and upload to S3"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioftp>=0.27.2",
    "arro3-core>=0.6.3",
    "ftputil>=5.1.0",
    "marimo>=0.16.5",
    "obstore>=0.8.2",
    "polars>=1.34.0",
    "python-lsp-server>=1.13.1",
    "ruff>=0.13.3",
    "ty>=0.0.1a21",
]
